--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1393,11 +1393,11 @@ path
     }
     .main-title
     {
-        font-size: 30px;
+        font-size: 24px;
     }
     .top-title
     {
-        font-size: 16px;
+        font-size: 14px;
     }
 
 
@@ -1416,6 +1416,7 @@ path
     .service-btn
     {
         padding: 8px 30px;
+        gap:10px;
     }
     #servicesection .service-btn p
     {
@@ -1436,6 +1437,7 @@ path
     #servicesection .services
     {
         margin-top:30px;
+        row-gap: 30px;
     }
     .top-hexa
     {
@@ -1493,7 +1495,7 @@ path
     }
     #social-section .right .img-div
     {
-        padding: 0 20px 50px;
+        padding: 0 20px 60px;
     }
 
     #blogsection
@@ -1602,7 +1604,7 @@ path
 
     .main-title
     {
-        font-size: 26px;
+        font-size: 22px;
     }
     .main-para
     {
@@ -1659,6 +1661,10 @@ path
     {
         font-size: 14px;
     }
+    #servicesection .service-head
+    {
+        font-size: 18px;
+    }
     
 
 
@@ -1681,6 +1687,11 @@ path
     #footersection .footer-1 .main-para
     {
         font-size: 14px;
+    }
+
+    #footersection .copyright p
+    {
+        font-size: 12px;
     }
 }
 
@@ -2140,14 +2151,19 @@ path
 
 
 
-/* EPC BANNER SECTION */
+/* INNER BANNER SECTION */
 #epc-banner
 {
     background: url(../img/banner/epc-banner-img.jpg);
     background-position: top center;
     background-size: cover;
 }
-
+#bi-banner
+{
+    background: url(../img/banner/epc-banner-img.jpg) !important;
+    background-position: top center;
+    background-size: cover;
+}
 
 /* epc section */
 .innerpg-section
@@ -2269,7 +2285,7 @@ path
 
 
 
-
+/* SERVICE SLIDER INNER */
 .service-inner .services
 {
     display: flex !important;
@@ -2279,7 +2295,121 @@ path
 {
     padding: 20px 10px !important;
 }
+.service-inner .service-head
+{
+    font-size: 18px !important;
+}
 .service-inner .service-desc .service-para
 {
     font-size: 14px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
+
+
+
+@media only screen and (max-width: 992px)
+{
+    .innerpg-section .top-sec .right
+    {
+        padding:0 40px 60px;
+    }
+    .innerpg-section .bottom-sec .left
+    {
+        padding:0 40px 60px;
+    }
+    .innerpg-section .bottom-sec
+    {
+        padding: 8% 0;
+    }
+    .content-parasec
+    {
+        padding: 0 30px;
+    }
+    .service-inner
+    {
+        padding: 0 0 8% 0 !important;
+    }
+    .service-inner .service-desc
+    {
+        padding:10px 15px !important;
+    }
+    #servicesection .service-para
+    {
+        margin-top: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 768px)
+{
+    .innerpg-section .top-sec .right
+    {
+        padding:0 20px 40px;
+    }
+    .innerpg-section .bottom-sec .left
+    {
+        padding:0 20px 40px;
+    }
+    .content-parasec
+    {
+        padding:0 10px;
+    }
+    .innerpg-section .bottom-sec .right ul li
+    {
+        font-size: 16px;
+        line-height: 20px;
+        padding: 10px 34px;
+    }
+    .innerpg-section .weblink-sec h5
+    {
+        font-size: 20px;
+    }
+    .innerpg-section .weblink-sec .items .btn
+    {
+        padding: 10px 40px;
+        gap:10px;
+    }
+    .innerpg-section .weblink-sec .items .btn i
+    {
+        font-size: 16px;
+    }
+    .service-inner
+    {
+        padding: 0 0 10% 0 !important;
+    }
+    .service-inner .service-desc
+    {
+        padding: 10px 15px !important;
+    }
+    .service-inner .services
+    {
+        margin-top:20px !important;
+    }
+}
+
+
+@media only screen and (max-width: 380px)
+{
+    .innerpg-section .bottom-sec .right ul li
+    {
+        font-size: 14px;
+        line-height: 16px;
+        background-size: 18px;
+        padding: 10px 30px;
+    }
+    .innerpg-section .weblink-sec h5
+    {
+        margin-bottom: 0;
+        font-size: 16px;
+    }
+    .innerpg-section .weblink-sec .items .btn i
+    {
+        font-size: 12px;
+    }
+}
+
+
+
