--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2235,6 +2235,7 @@ path
 {
     display: flex;
     gap:20px;
+    align-items: center;
 }
 .innerpg-section .weblink-sec .items a
 {
@@ -2282,7 +2283,11 @@ path
 {
     transform: rotate(45deg);
 } */
-
+.innerpg-section .media-head
+{
+    font-weight: 700;
+    font-size: 24px;
+}
 
 
 /* SERVICE SLIDER INNER */
@@ -2307,6 +2312,7 @@ path
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+
 
 
 
@@ -2339,6 +2345,11 @@ path
     #servicesection .service-para
     {
         margin-top: 10px;
+    }
+
+    .innerpg-section .media-head
+    {
+        font-size: 20px;
     }
 }
 
@@ -2408,6 +2419,11 @@ path
     .innerpg-section .weblink-sec .items .btn i
     {
         font-size: 12px;
+    }
+
+    .innerpg-section .media-head
+    {
+        font-size: 16px;
     }
 }
 
