--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1517,7 +1517,13 @@ path
     }
     #blogsection .right
     {
-        /* justify-content: start; */
+        justify-content: start;
+    }
+    #blogsection .right .main-btn
+    {
+        font-size: 12px;
+        padding: 5px 20px;
+        font-weight: 400;
     }
     #blogsection .owl-dot.active
     {
@@ -1852,6 +1858,47 @@ path
 
 
 
+.about-iconsection
+{
+    padding: 0 0 10% 0;
+}
+.about-iconsection .icon-main
+{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:30px;
+}
+.about-iconsection .icon-main .icon-items
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap:30px;
+    text-decoration: none;
+    color: #000;
+    padding: 40px;
+    /* border: 1px solid #00000010; */
+    border-radius: 40px;
+    transition: .3s ease;
+}
+.about-iconsection .icon-main .icon-items:hover
+{
+    box-shadow: 0 10px 30px #00000010;
+}
+.about-iconsection .icon-main .icon-items h4
+{
+    font-size: 22px;
+    font-weight: 600;
+}
+.about-iconsection .icon-main .icon-items img
+{
+    /* max-width: 40% !important; */
+    padding:0 70px; 
+}
+
+
+
 @media screen and (max-width: 1536px)
 {
     .inner-main-title
@@ -1894,6 +1941,19 @@ path
     {
         padding-top:60px;
     }
+    .about-iconsection .icon-main
+    {
+        grid-template-columns: repeat(2, 1fr);
+        gap:10px;
+    }
+    .about-iconsection .icon-main .icon-items
+    {
+        padding: 20px;
+    }
+    .about-iconsection .icon-main .icon-items img
+    {
+        padding: 0 100px;
+    }
 }
 
 
@@ -1919,6 +1979,15 @@ path
     {
         padding: 0 40px;
     }
+    .about-iconsection .icon-main
+    {
+        grid-template-columns: repeat(1, 1fr);
+        gap:10px;
+    }
+    .about-iconsection .icon-main .icon-items img
+    {
+        padding: 0 125px;
+    }
 }
 
 @media only screen and (max-width: 380px)
@@ -1943,6 +2012,10 @@ path
     #header .container-fluid
     {
         flex-wrap: nowrap;
+    }
+    .about-iconsection .icon-main .icon-items img
+    {
+        padding: 0 110px;
     }
 }
 
